Update saved searches on PUT
