# api/handlers/savesearchhandler.py
@@ -1,4 +1,3 @@
-import bson
 from ..web import base
 from .. import config, validators
 from ..auth import require_login
@@ -9,19 +8,19 @@ from ..dao import noop
 
 
 log = config.log
-storage = SearchStorage()
 
 class SaveSearchHandler(base.RequestHandler):
 
     def __init__(self, request=None, response=None):
         super(SaveSearchHandler, self).__init__(request, response)
+        self.storage = SearchStorage()
 
     @require_login
     def post(self):
         payload = self.request.json_body
         validators.validate_data(payload, 'save-search-input.json', 'input', 'POST')
         payload['permissions'] = [{"_id": self.uid, "access": "admin"}]
-        result = storage.create_el(payload)
+        result = self.storage.create_el(payload)
         if result.acknowledged:
             if result.inserted_id:
                 return {'_id': result.inserted_id}
@@ -30,39 +29,33 @@ class SaveSearchHandler(base.RequestHandler):
 
     def get_all(self):
         log.debug(self.uid)
-        return storage.get_all_el({}, {'_id': self.uid}, {'label': 1})
+        return self.storage.get_all_el({}, {'_id': self.uid}, {'label': 1})
 
     def get(self, sid):
-        result = storage.get_el(sid)
+        result = self.storage.get_el(sid)
         if result is None:
             self.abort(404, 'Element {} not found'.format(sid))
         return result
 
     def delete(self, sid):
-        search = storage.get_container(sid)
+        search = self.storage.get_container(sid)
         permchecker = groupauth.default(self, search)
-        result = permchecker(storage.exec_op)('DELETE', sid)
+        result = permchecker(self.storage.exec_op)('DELETE', sid)
         if result.deleted_count == 1:
             return {'deleted': result.deleted_count}
         else:
             self.abort(404, 'Group {} not removed'.format(sid))
         return result
 
-    def replace_search(self, sid):
+    def put(self, sid):
         payload = self.request.json_body
-        if payload.get('_id'):
-            del(payload['_id'])
-        if payload.get('permissions'):
-            perms = payload['permissions']
-            del(payload['permissions'])
+        log.debug(payload)
         validators.validate_data(payload, 'save-search-update.json', 'input', 'PUT')
-        payload['_id'] = bson.ObjectId(sid)
-        payload['permissions'] = perms
-        search = storage.get_container(sid)
-        permchecker = groupauth.default(self, search)
-        permchecker(noop)('DELETE', sid)
-        result = storage.replace_el(payload)
-        if result.acknowledged:
-            if result.inserted_id:
-                return {'_id': result.inserted_id}
-        return {"hi" : "bye"}
+        permchecker = groupauth.default(self, payload)
+        permchecker(noop)('PUT', sid)
+        result = self.storage.update_el(sid, payload)
+        log.debug(result)
+        if result.modified_count == 1:
+            return {'modified': result.modified_count}
+        else:
+            self.abort(404, 'Saved search {} not updated'.format(sid))
